# melange

./: Cargo.toml  README.md
experiments/custom_sleef_test/: Cargo.toml
experiments/custom_sleef_test/benches/: ops.rs
experiments/custom_sleef_test/src/: lib.rs  sleef_custom.rs
experiments/static_graph/const_graphs/: Cargo.toml
experiments/static_graph/const_graphs/src/: graph_display.rs  label.rs  main.rs
melange_macros/: Cargo.toml
melange_macros/src/: axes_syntax.rs  buf_syntax.rs  dyn_axes_visitor.rs  lib.rs  typenum_uint_generation.rs
src/: algebra.rs  hkt.rs  lib.rs  ops.rs  prelude.rs  scalar_traits.rs  stack_buffer.rs
src/autodiff/: mod.rs  reverse_mode.rs
src/autodiff/reverse_mode/: accumulate_on.rs  destructure.rs  differentiable.rs  dispatch_tuple.rs  mod.rs  ops.rs  rvar.rs  topological_iter.rs
src/axes/: block.rs  broadcast.rs  mod.rs  static_axes.rs  stride.rs  transpose.rs
src/backprop/: core_ops.rs  elementwise_ops.rs  mod.rs  prelude.rs  variable.rs  view.rs
src/gat/: mod.rs  streaming_iterator.rs
src/iter/: mod.rs  streaming_iterator.rs  strided_iter.rs
src/tensor/: alloc.rs  blas.rs  core_ops.rs  elementwise.rs  elementwise_ops.rs  index.rs  linalg.rs  linear_algebra.rs  mod.rs  prelude.rs  reduction.rs  reductions.rs  shape.rs  tensor_traits.rs
src/tensor/layout/: dynamic_layout.rs  layout.rs  mod.rs  static_layout.rs
src/tensor/strided_iterator/: chunks_mut.rs  mod.rs  strided_iter.rs  strided_iter_mut.rs  strided_iterator.rs  strided_iterator_mut.rs
src/tensor/tensor/: alloc.rs  convert.rs  mod.rs  view.rs
