[package]
name = "melange"
version = "0.1.0"
authors = ["Lucas Bourtoule <lucas@bourtoule.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.12.0"
cblas = "0.2"
openblas-src = { version = "0.9", default-features = false, features = ["cblas"] }
num-complex = "0.2.4"
# melange_macros = { path = "melange_macros", version = "0.1.0" }
