[package]
name = "melange"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typenum = "1.13.0"
num-complex = "0.2.4"
cblas = "0.2"
openblas-src = { version = "0.9", default-features = false, features = ["cblas"] }
melange_macros = { path = "./melange_macros" }
as-dyn-trait = "0.2.0"
