[package]
name = "melange_macros"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "visit-mut"] }
quote = "1.0"
uuid = { version = "0.8", features = ["v4"] }
proc-macro2 = "1.0"

[lib]
proc-macro = true
